--- a/ga_planner_app/app/views/courses/index.html.haml
+++ b/ga_planner_app/app/views/courses/index.html.haml
@@ -1,19 +1,14 @@
-= link_to('Create New Course', new_course_path)
+- if can? :create, Course
+  = link_to('Create New Course', new_course_path)
 
 %ul
   - @courses.each do |course|
     %li
-      %h4= course.name
-      %p= "Places available: #{course.places}"
+      %h4= link_to(course.name, course_path(course))
       %p= "Start Date: #{course.start_date}"
       %p= "End date: #{course.end_date}"
-      %p= "Classroom: #{course.classroom.name}"
-      %p Instructors:
-      - course.instructors.each do |instructor|
-        %ul
-          %li= "#{instructor.first_name} #{instructor.last_name}"
-      = image_tag(course.image)
+      = image_tag(course.image, :width => 50)
       %br/
-      = link_to('Book Place')
-      = link_to('Edit Course', edit_course_path(course))
-      = link_to('Delete Course', course, :method => :delete, :confirm => 'Are you sure?')
+
+
+
