--- a/ga_planner_app/app/views/users/index.html.haml
+++ b/ga_planner_app/app/views/users/index.html.haml
@@ -1,8 +1,9 @@
-= link_to('Create New User', new_user_path)
+- if can? :manage, :all
+  = link_to('Create New User', new_user_path)
 
 %ul
   - @users.each do |user|
     %li
       %h4= link_to("#{user.first_name} #{user.last_name}", user_path(user))
       %p= user.level
-      %p= image_tag(user.image)
+      %p= image_tag(user.image, :width => 50)
