--- a/ga_planner_app/app/views/layouts/application.html.haml
+++ b/ga_planner_app/app/views/layouts/application.html.haml
@@ -7,23 +7,24 @@
     = csrf_meta_tags
   %body
     %nav
-      = link_to('Courses', courses_path)
-      = if current_user then link_to('Profile', user_path(current_user)) end
-      - if current_user
-        = if current_user.level != 'student' then link_to('Users', users_path) end
+      %div.menubar
+        .courses
+          = link_to('Courses', courses_path)
+        = if current_user then link_to('Profile', user_path(current_user)) end
+        - if current_user
+          = if current_user.level != 'student' then link_to('Users', users_path) end
 
-      
-      - if current_user
-        Logged in as #{current_user.first_name} #{current_user.last_name}. 
-        = link_to 'Logout', logout_path, method: :delete
-      - else
-        = link_to 'Login', login_path
-        or
-        = link_to 'Sign Up', signup_path
-
-    - flash.each do |name, message|
-      %div(class="flash-message flash-#{name}")
-        = message
-    %br/
+        .login
+          - if current_user
+            Logged in as #{current_user.first_name} #{current_user.last_name}
+            = link_to 'Logout', logout_path, method: :delete 
+          - else
+            = link_to 'Login', login_path
+            or
+            = link_to 'Sign Up', signup_path
+    .flash
+      - flash.each do |name, message|
+        %div(class="flash-message flash-#{name}")
+          = message
     %section
       = yield
