--- a/ga_planner_app/app/views/users/index.html.haml
+++ b/ga_planner_app/app/views/users/index.html.haml
@@ -1,9 +1,14 @@
-- if can? :manage, :all
-  = link_to('Create New User', new_user_path)
+.button
+  - if can? :manage, :all
+    = link_to('Create New User', new_user_path)
+%br/
 
-%ul
-  - @users.each do |user|
-    %li
-      %h4= link_to("#{user.first_name} #{user.last_name}", user_path(user))
-      %p= user.level
-      %p= image_tag(user.image, :width => 50)
+- @users.each do |user|
+  %div.list-box
+    .picture
+      = image_tag(user.image, :width => 50, :height => 50)
+    .name
+      = link_to("#{user.first_name} #{user.last_name}", user_path(user))
+    .level
+      = user.level
+  %br/ 
