--- a/ga_planner_app/app/views/users/show.html.haml
+++ b/ga_planner_app/app/views/users/show.html.haml
@@ -1,25 +1,30 @@
-%h4= "#{@user.first_name} #{@user.last_name}"
-%p= "Email: #{@user.email}"
-%p= "Address: #{@user.address}"
-%p= "Gender: #{@user.gender}"
-%p= "User type: #{@user.level}"
-= image_tag(@user.image)
-%br/
+.show
+  %h3= "#{@user.first_name} #{@user.last_name}"
+  %p= "Email: #{@user.email}"
+  %p= "Address: #{@user.address}"
+  %p= "Gender: #{@user.gender}"
+  %p= "User type: #{@user.level}"
+  = image_tag(@user.image, :width => 225, :height => 225)
+  %br/
+  %br/
 
-= link_to('Edit Profile', edit_user_path(@user))
-- if can? :destroy, User
-  = link_to('Delete User', @user, :method => :delete, :confirm => 'Are you sure?')
-%br/
+  .button
+    = link_to('Edit Profile', edit_user_path(@user))
+  - if can? :destroy, User
+    .button
+      = link_to('Delete User', @user, :method => :delete, :confirm => 'Are you sure?')
 
-%h5 Course Enrolments:
-- @user.courses.each do |course|
-  %ul
-    %li= course.name 
-    = link_to('Cancel Booking', student_enrolment_path(course_id: course.id, user_id: @user.id), :method => :delete, :confirm => 'Are you sure?')
-
-- if @user.level != 'student'
-  %h5 Instructor Enrolments:
-  - @user.lessons.each do |lesson|
+  %br/
+  %br/
+  %h4 Course Enrolments:
+  - @user.courses.each do |course|
     %ul
-      %li= lesson.name
+      %li= course.name 
+      = link_to('Cancel Booking', student_enrolment_path(course_id: course.id, user_id: @user.id), :method => :delete, :confirm => 'Are you sure?')
+
+  - if @user.level != 'student'
+    %h4 Instructor Enrolments:
+    - @user.lessons.each do |lesson|
+      %ul
+        %li= lesson.name
 
