--- a/ga_planner_app/app/views/courses/index.html.haml
+++ b/ga_planner_app/app/views/courses/index.html.haml
@@ -1,10 +1,6 @@
-.button
-  - if can? :create, Course
-    = link_to('Create New Course', new_course_path)
-%br/
 
 - @courses.each do |course|
-  %div.list-box
+  %div.list-course
     .picture
       = image_tag(course.image, :width => 50, :height => 50)
     .name      
@@ -13,8 +9,12 @@
       = "Start Date: #{course.start_date}"
     .end
       = "End date: #{course.end_date}"
-
     %br/
+
+- if can? :create, Course
+  .button
+    = link_to('Create New Course', new_course_path)
+%br/
 
 
 
