--- a/ga_planner_app/app/views/users/index.html.haml
+++ b/ga_planner_app/app/views/users/index.html.haml
@@ -1,14 +1,15 @@
-.button
-  - if can? :manage, :all
-    = link_to('Create New User', new_user_path)
-%br/
 
 - @users.each do |user|
-  %div.list-box
+  %div.list-user
     .picture
       = image_tag(user.image, :width => 50, :height => 50)
     .name
       = link_to("#{user.first_name} #{user.last_name}", user_path(user))
     .level
       = user.level
-  %br/ 
+    
+
+- if can? :manage, :all
+  .button
+    = link_to('Create New User', new_user_path)
+%br/
