--- a/ga_planner_app/app/assets/stylesheets/style.css.scss
+++ b/ga_planner_app/app/assets/stylesheets/style.css.scss
@@ -2,6 +2,7 @@
   background-color: gray;
   color: white;
   padding: 20px;
+  margin-bottom: 30px;
 
   a {
     font-size: 20px;
@@ -21,14 +22,16 @@
 }
 
 .flash {
-  background-color: red;
+  background-color: #acb7ac;
+  color: white;
   margin: 10px;
 }
 
 .button {
   margin-left: 5px;
   margin-right: 5px;
-
+  margin-top: 30px;
+  margin-bottom: 10px;
   border: solid blue 1px;
   background-color: white;
   border-radius: 3px;
@@ -40,37 +43,70 @@
   }
 }
 
-.list-box {
-  width: 600px;
+.list-course {
+  background-color: #f4eeea;
+  width: 875px;
   height: 50px;
   border: solid black 1px;
-  border-radius: 3px;
-  margin-left: 20px;
+  border-radius: 5px;
+  margin-left: 30px;
   margin-right: 20px;
+  margin-bottom: 10px;
   padding: 10px;
   display: block;
   .picture {
     display: inline;
     padding-left: 20px;
-
   }
   .name {
     position: absolute;
     font-size: 20px;
     display: inline;
-    padding-left: 20px;
+    padding-left: 40px;
+    padding-top: 13px
   }
   .start {
+    position: absolute;
     display: inline;
-    padding-left: 20px;
+    left: 550px;
+    padding-top: 15px;
   }
   .end {
+    position: absolute;
+    display: inline;
+    left: 750px;
+    padding-top: 15px;
+  }
+}
+
+.list-user {
+  background-color: #fcfadf;
+  width: 475px;
+  height: 50px;
+  border: solid black 1px;
+  border-radius: 5px;
+  margin-left: 30px;
+  margin-right: 20px;
+  margin-bottom: 10px;
+  padding: 10px;
+  display: block;
+  .picture {
     display: inline;
     padding-left: 20px;
   }
-  .level {
+  .name {
+    position: absolute;
+    font-size: 20px;
     display: inline;
-    padding-left: 20px;
+    padding-left: 40px;
+    padding-top: 13px;
+  }
+  .level {
+    position: absolute;
+    left: 400px;
+    display: inline;
+    padding-left: 40px;
+    padding-top: 15px;
   }
 }
 
