--- a/ga_planner_app/app/views/courses/show.html.haml
+++ b/ga_planner_app/app/views/courses/show.html.haml
@@ -1,37 +1,42 @@
-%h4= "#{@course.name}"
-%p= "Places: #{@course.places}"
-%p= "Start Date: #{@course.start_date}"
-%p= "End Date: #{@course.end_date}"
-%p= "Classroom: #{@course.classroom.name}"
-= image_tag(@course.image)
-%br/
-- if current_user
-  = if @course.places >= 1 then link_to('Book Place', student_enrolments_path(course_id: @course.id), :method => :post) end
-
-%h5 Instructors:
-- @course.instructors.each do |instructor|
-  %ul
-    %li= "#{instructor.first_name} #{instructor.last_name}"
-    - if can? :destroy, InstructorEnrolment
-      = link_to('Remove Instructor Booking', instructor_enrolment_path(course_id: @course.id, user_id: instructor.id), :method => :delete, :confirm => 'Are you sure?')
-
-- if can? :create, InstructorEnrolment
-  = form_tag instructor_enrolments_path(course_id: @course.id) do
-    = select_tag :user_id, options_from_collection_for_select(@new_instructors, "id", "last_name")
-    = submit_tag 'Add Instructor to Course'
-
-- if can? :read, :all
-  %h5 Students:
-  - @course.students.each do |student|
+.show
+  %h3= "#{@course.name}"
+  %p= "Places: #{@course.places}"
+  %p= "Start Date: #{@course.start_date}"
+  %p= "End Date: #{@course.end_date}"
+  %p= "Classroom: #{@course.classroom.name}"
+  = image_tag(@course.image, :width => 325, :height => 225)
+  %br/
+  - if current_user
+    .button
+      = if @course.places >= 1 then link_to('Book Place', student_enrolments_path(course_id: @course.id), :method => :post) end
+  
+  %br/
+  %br/
+  %br/
+  %br/
+  %h4 Instructors:
+  - @course.instructors.each do |instructor|
     %ul
-      %li= "#{student.first_name} #{student.last_name}"
-      = link_to('Remove Student Booking', student_enrolment_path(course_id: @course.id, user_id: student.id), :method => :delete, :confirm => 'Are you sure?')
+      %li= "#{instructor.first_name} #{instructor.last_name}"
+      - if can? :destroy, InstructorEnrolment
+        = link_to('Remove Instructor Booking', instructor_enrolment_path(course_id: @course.id, user_id: instructor.id), :method => :delete, :confirm => 'Are you sure?')
 
-/ = form_tag student_enrolments_path(course_id: @course.id) do
-/   = select_tag :user_id, options_from_collection_for_select(@new_students, "id", "last_name")
-/   = submit_tag 'Add Student to Course'
+  - if can? :create, InstructorEnrolment
+    = form_tag instructor_enrolments_path(course_id: @course.id) do
+      = select_tag :user_id, options_from_collection_for_select(@new_instructors, "id", "last_name")
+      = submit_tag 'Add Instructor to Course'
 
-- if can? :update, Course
-  = link_to('Edit Course', edit_course_path(@course))
-- if can? :destroy, Course
-  = link_to('Delete Course', @course, :method => :delete, :confirm => 'Are you sure?')
+  - if can? :read, :all
+    %h4 Students:
+    - @course.students.each do |student|
+      %ul
+        %li= "#{student.first_name} #{student.last_name}"
+        = link_to('Remove Student Booking', student_enrolment_path(course_id: @course.id, user_id: student.id), :method => :delete, :confirm => 'Are you sure?')
+
+
+  - if can? :update, Course
+    .button
+      = link_to('Edit Course', edit_course_path(@course))
+  - if can? :destroy, Course
+    .button
+      = link_to('Delete Course', @course, :method => :delete, :confirm => 'Are you sure?')
