course update logic improved

--- a/ga_planner_app/app/assets/stylesheets/style.css.scss
+++ b/ga_planner_app/app/assets/stylesheets/style.css.scss
@@ -25,9 +25,11 @@ body {
 }
 
 .flash {
-  background-color: #acb7ac;
+  background-color: #ae0805;
   color: white;
   margin: 10px;
+  border-radius: 10px;
+  padding-left: 20px;
 }
 
 .button {
